Fixed the bugs that was stopping the tiles changing to the wrong colours

--- a/src/App.css
+++ b/src/App.css
@@ -147,3 +147,9 @@
 .largeKeyboardLetters {
   width: 80px;
 }
+
+.wonMessage {
+  font-size: 75px;
+  color: white;
+  margin-bottom: 40px;
+}
